fix save button behind schema panel on replace file form

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -1246,6 +1246,7 @@ th {background: none !important;}
   border-radius: 2px;
   text-shadow: none;
   font-family: inherit !important;
+  position: relative;
 }
 
 .ui-buttonset { background: #f7f7f9 !important;}
